--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "tailwindcss": "^4.1.13",
     "vue": "^3.5.18"
   },
   "devDependencies": {
