--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-i18n": "^11.1.12"
   },
   "devDependencies": {
+    "@types/node": "^24.5.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "prettier": "3.6.2",
