--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "build:ghpages": "vite build --mode ghpages",
     "preview": "vite preview",
     "format": "prettier . --write"
   },
@@ -19,6 +20,7 @@
     "@types/node": "^24.5.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "gh-pages": "^6.3.0",
     "prettier": "3.6.2",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
